src/test/deca/context/valid/conv1.deca
// Description:
//    conversion de int 
//
// Resultats:
//erreur
//
//
// Historique:
//    cree le 06/01/2025

{   
   //float a = (float) 3;
   //int b = (int) 3.0;
   }