src/test/deca/context/invalid/selection_not_class.deca
// Description:
//    Selection dans main
//
// Resultats:
//
//
// Historique:
//    cree le 19/01/2025

class A{   
   int x;

}
{
    int b = 2;
    int c;
    A a = new A();
    a.x;
    b.x;
}